infra/k8s/aws/overlays/staging/shared/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soranix-staging
  labels:
    environment: staging
  annotations:
    description: 'Soranix Staging Environment'
