infra/k8s/aws/overlays/staging/shared/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-app-route
spec:
  hostnames:
    - staging.app.soranix.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-web-route
spec:
  hostnames:
    - staging.web.soranix.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-admin-route
spec:
  hostnames:
    - staging.admin.soranix.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-api-route
spec:
  hostnames:
    - staging.api.soranix.com
